# faisca

./: .gitignore  README.md  faisca_mlx.py  faisca_torch.py  mlx-old.py  pyproject.toml
datasets/: bocage-mini.txt
notebooks/: model.ipynb
reference_implementations/: Raschka.py  duarte_gpt_GRPO.py  grpo_from_scratch.py  karpathy.py  ppo.py
scripts/: faisca_v0.py  faisca_v1.py  faisca_v2.py  faisca_v3.py  faisca_v4.py  faisca_v5.py  faisca_v5_mlx.py  faisca_v6.py  faisca_v7.py  faisca_v8.py
src/faisca/: __init__.py
