[project]
name = "faisca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "duarteocarmo", email = "me@duarteocarmo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.27.1",
    "mlx-data>=0.1.0",
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter-black>=0.4.0",
    "ruff>=0.12.5",
]
