[project]
name = "faisca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "duarteocarmo", email = "me@duarteocarmo.com" }]
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.5",
  "mlx>=0.27.1",
  "mlx-data>=0.1.0",
  "polars>=1.31.0",
  "tiktoken>=0.9.0",
  "torch>=2.7.1",
  "torchtune>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.30.0", "jupyter-black>=0.4.0", "ruff>=0.12.5"]
